	   Spam, Ham, and Unsure, compared to the old two-state Yes/No
	   results.

	!!!!!!!! READ THE RELEASE.NOTES !!!!!!!!

	2005-01-04

	* bogoutil now reads the configuration files to know the user's
	  db_lk_max_* values.  Reported by Karl O. Pinc.

	* Berkeley DB Transactional recovery now uses the actual db_lk_max_*
	  values rather than hardcoded 1024.  Reported by Karl O. Pinc.

	2005-01-02

	* Initial support for Russian character sets (thanks to Evgeny
          Kotsuba).

	2004-12-30

	* Bogolexer man page:  replaced incorrect references to
          'bogofilter' with 'bogolexer'.

	* Added '-O file' to specify bogolexer output file.

	2004-12-28

	* Fixed bogoutil --db-remove-environment DIR, which would just abort.

	* Fixed several memory leaks.

	* Refactored long option code.  All definitions are now in one
	  file (longoptions.c).  Programs bogolexer and bogoutil
	  ignore options that don't apply to them, rather than abort.

	* Long options used in the config file use underscores in
	  their names.  Used on the command line, they have hyphens.
	  This fixes a problem where some options had hyphens and some
	  had underscores.

0.93.3.1 2004-12-26

	* Fixed errors in bogoutil's usage and help messages.

0.93.3	2004-12-24

	* Bogoutil's options for maintaining the database environment
          are all long options with a "db-" prefix.
	* Bogoutil's help message and man page include the new long
          options.

	2004-12-21

	* Early Christmas Gift: Bogofilter now supports SQLite v3.
	  Requires SQLite v3.0.8. See the RELEASE.NOTES.

	2004-12-20

	* Internal cleanup: Move transaction handling back into database space,
	  and let the database backend driver map this into the environment if
	  necessary.

	* Portability fix for BerkeleyDB versions 3.1 and 3.2:
	  log_archive expects a fourth argument.

	2004-12-17

	* lexer_v3 HTML parser fix for urlencoded characters, by Krzysztof
	  Foltman. Speeds up a particular case of malformatted mail.
